style: Prevent logo from taking up too much space

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,8 @@ body {
     width: 50%;
     height: 50%;
     padding: 1px 5px;
+    max-width: 500px;
+    max-height: 500px;
 }
 
 .title {
